src: added encrypted bip39 and bip44
config: added --with-lib-bip39 option
depends: add libdogecoin and libunistring
src: added bip39 and bip44 to various classes
test: added bip39/bip44 tests
wallet: added bip39 wallet tests
ci: updated ci
qa: added bip44 tests

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -142,6 +142,11 @@ BITCOIN_TESTS =\
   test/univalue_tests.cpp \
   test/util_tests.cpp
 
+if USE_LIB
+BITCOIN_TESTS += \
+  test/bip39_tests.cpp
+endif
+
 if ENABLE_WALLET
 BITCOIN_TESTS += \
   wallet/test/wallet_test_fixture.cpp \
