--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,8 +78,8 @@ jobs:
               qemu-aarch64 -E LD_LIBRARY_PATH=/usr/aarch64-linux-gnu/lib/ /usr/aarch64-linux-gnu/lib/ld-linux-aarch64.so.1 src/test/test_dogecoin
             check-security: true
             check-symbols: false
-            dep-opts: "NO_QT=1 LIB_BIP39=1"
-            config-opts: "--enable-experimental --with-armv8-crypto --with-armv82-crypto --with-lib-bip39 --enable-zmq --enable-glibc-back-compat LDFLAGS=-static-libstdc++ --enable-c++14"
+            dep-opts: "NO_QT=1"
+            config-opts: "--enable-experimental --with-armv8-crypto --with-armv82-crypto --with-bip39 --enable-zmq --enable-glibc-back-compat LDFLAGS=-static-libstdc++ --enable-c++14"
             goal: install
           - name: aarch64-linux
             host: aarch64-linux-gnu
@@ -175,8 +175,8 @@ jobs:
               make check $MAKEJOBS VERBOSE=1
             check-security: true
             check-symbols: false
-            dep-opts: "AVX2=1 MINGW=1 LIB_BIP39=1"
-            config-opts: "--enable-experimental --enable-scrypt-sse2 --with-intel-avx2 --with-gui=qt5 --enable-c++14 --with-lib-bip39"
+            dep-opts: "AVX2=1 MINGW=1"
+            config-opts: "--enable-experimental --enable-scrypt-sse2 --with-intel-avx2 --with-gui=qt5 --enable-c++14 --with-bip39"
             goal: install
           - name: x86_64-macos
             host: x86_64-apple-darwin11
@@ -197,8 +197,8 @@ jobs:
             run-bench: false
             check-security: true
             check-symbols: false
-            dep-opts: "LIB_BIP39=1"
-            config-opts: "--with-gui=qt5 --disable-tests --enable-experimental --enable-scrypt-sse2 --with-lib-bip39"
+            dep-opts: ""
+            config-opts: "--with-gui=qt5 --disable-tests --enable-experimental --enable-scrypt-sse2 --with-bip39"
             goal: deploy
             sdk: 10.11
             sdk-shasum: "bec9d089ebf2e2dd59b1a811a38ec78ebd5da18cbbcd6ab39d1e59f64ac5033f"
@@ -211,8 +211,8 @@ jobs:
               make check $MAKEJOBS VERBOSE=1
               qa/pull-tester/install-deps.sh
               qa/pull-tester/rpc-tests.py --coverage
-            dep-opts: "AVX2=1 LIB_BIP39=1"
-            config-opts: "--enable-experimental --enable-scrypt-sse2 --with-intel-avx2 --with-lib-bip39 --with-gui=qt5 --enable-zmq --enable-glibc-back-compat --enable-reduce-exports --enable-c++14"
+            dep-opts: "AVX2=1"
+            config-opts: "--enable-experimental --enable-scrypt-sse2 --with-intel-avx2 --with-bip39 --with-gui=qt5 --enable-zmq --enable-glibc-back-compat --enable-reduce-exports --enable-c++14"
             goal: install
 
     runs-on: ubuntu-24.04
