--- a/pat/requirements.txt
+++ b/pat/requirements.txt
@@ -1,10 +1,10 @@
 # PAT Visual Simulator Requirements
-# Install with: pip install -r requirements.txt
+# Install with: pip3 install -r requirements.txt
 
 # Core dependencies (required)
 numpy>=1.21.0
 pygame>=2.1.0
-pygame_gui>=0.6.0
+pygame_gui==0.6.0  # Specific version for compatibility
 
 # Optional dependencies (improved performance)
 numba>=0.56.0; python_version >= "3.7"
@@ -12,3 +12,6 @@ psutil>=5.8.0
 
 # Build tools (for developers)
 pyinstaller>=5.0.0
+
+# Alternative pygame version for pygame_gui compatibility:
+# pygame==2.5.2  # Uncomment if pygame_gui issues persist
