feat: Implement OP_CHECKZKP for native Zero-Knowledge Proof verification

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -314,6 +314,8 @@ libdogecoin_consensus_a_SOURCES = \
   script/script.h \
   script/script_error.cpp \
   script/script_error.h \
+  zkp/verifier.cpp \
+  zkp/verifier.h \
   serialize.h \
   tinyformat.h \
   uint256.cpp \
