ci: upgrade pip/pin lief version 0.12.3
Signed-off-by: xanimo <bluezr@dogecoin.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,8 +226,8 @@ jobs:
                pkg-config bsdmainutils curl ca-certificates ccache rsync git \
                procps bison python3 python3-pip python3-setuptools python3-wheel
           apt-get install -y ${{ matrix.packages }}
-          python3 -m pip install setuptools==70.3.0 --upgrade
-          python3 -m pip install lief
+          python3 -m pip install setuptools==70.3.0 --upgrade pip
+          python3 -m pip install lief==0.12.3
 
       - name: Post install
         if: ${{ matrix.postinstall }}
